working angular setup

--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class='container-fluid'>
-  <app-nav-menu></app-nav-menu>
-  <router-outlet></router-outlet>
+  <app-top-bar></app-top-bar>
 </div>
