--- a/WgWall/ClientApp/src/app/top-bar/top-bar.component.html
+++ b/WgWall/ClientApp/src/app/top-bar/top-bar.component.html
@@ -1,9 +1,19 @@
-<div class="row">
-  <div class="col">
-    <form></form>
-  </div>
-  <div class="col-md-auto">
-    <app-users></app-users>
-  </div>
+<nav class="navbar navbar-dark bg-dark navbar-expand">
+  <a class="navbar-brand" href="/">home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-</div>
+  <div class="collapse navbar-collapse" id="mainNavbar">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        form stuff 2
+        <fa-icon [icon]="faPlusCircle"></fa-icon>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <app-users></app-users>
+    </ul>
+  </div>
+</nav>
