--- a/WgWall/ClientApp/src/app/users/users.component.html
+++ b/WgWall/ClientApp/src/app/users/users.component.html
@@ -1,9 +1,4 @@
-<div class="row">
-  <div class="col" *ngFor="let user of users">
-    <svg version="1.1" class="rounded-circle" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
-      <rect width="100%" height="100%" fill="lightgrey" />
-      <text x="50" y="40" fill="#212529" text-anchor="middle" alignment-baseline="central">{{user.name}}</text>
-      <text x="50" y="60" fill="#6c757d" text-anchor="middle" alignment-baseline="central">{{user.karma}}</text>
-    </svg>
-  </div>
+<div class="row no-gutters">
+    <app-new-user class="col"></app-new-user>
+    <app-user class="col" *ngFor="let user of users" [user]="user"></app-user>
 </div>
