can now select user

--- a/WgWall/ClientApp/src/app/new-user/new-user.component.html
+++ b/WgWall/ClientApp/src/app/new-user/new-user.component.html
@@ -1,9 +1,11 @@
-<div class="pl-1 pr-1" class="hover-light-bg" (click)="open()" [ngClass]="{'selectable': !isOpen, 'light-bg': isOpen}">
-  <svg version="1.1" class="rounded-circle" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
-    <rect width="100%" height="100%" fill="lightgrey" />
-    <line x1="40" y1="50" x2="60" y2="50" style="stroke:#212529;stroke-width:2"></line>
-    <line x1="50" y1="40" x2="50" y2="60" style="stroke:#212529;stroke-width:2"></line>
-  </svg>
+<div class="pl-1 pr-1" [ngClass]="{'light-bg': isOpen}">
+  <div class="hover-light-bg" (click)="open()" [class.selectable]="!isOpen" >
+    <svg class="rounded-circle" version="1.1" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
+      <rect width="100%" height="100%" fill="lightgrey" />
+      <line x1="40" y1="50" x2="60" y2="50" style="stroke:#212529;stroke-width:2"></line>
+      <line x1="50" y1="40" x2="50" y2="60" style="stroke:#212529;stroke-width:2"></line>
+    </svg>
+  </div>
   <div class="popup p-2" *ngIf="isOpen">
     <form #frontendUserForm="ngForm" (ngSubmit)="createUser()">
       <div class="form-group">
