--- a/WgWall/ClientApp/src/app/user/user.component.html
+++ b/WgWall/ClientApp/src/app/user/user.component.html
@@ -1,5 +1,5 @@
-<div class="pl-1 pr-1">
-  <svg version="1.1" class="rounded-circle" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
+<div class="p-1" [ngClass]="{'bg-primary': user === selectedUser}" >
+  <svg version="1.1" class="rounded-circle" [ngClass]="{'border border-secondary': user === selectedUser, 'selectable': user !== selectedUser}" (click)="clicked()" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
     <rect width="100%" height="100%" fill="lightgrey" />
     <text x="50" y="40" fill="#212529" text-anchor="middle" alignment-baseline="central">{{user.name}}</text>
     <text x="50" y="60" fill="#6c757d" text-anchor="middle" alignment-baseline="central">{{user.karma}}</text>
