--- a/WgWall/ClientApp/src/app/products/products.component.html
+++ b/WgWall/ClientApp/src/app/products/products.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <h3>shopping list</h3>
         <p>
-            <span class="small text-secondary">click to increment, red to decrement, green to confirm purchase</span>
+            <span class="small text-secondary">click increments, red decrements, green confirms the purchase</span>
         </p>
 
         <table class="table table-sm table-borderless">
