using rxjs correctly now

--- a/WgWall/ClientApp/src/app/transport/transport.component.html
+++ b/WgWall/ClientApp/src/app/transport/transport.component.html
@@ -8,7 +8,7 @@
                 </p>
             </div>
             <div class="col-auto">
-                <button class="btn btn-primary btn-sm mr-2 row" type="button" (click)="startEdit()">
+                <button class="btn btn-primary btn-sm mr-2 row" type="button" (click)="toggleEdit()">
                     <fa-icon [icon]="faPencilAlt"></fa-icon>
                 </button>
             </div>
