--- a/WgWall/ClientApp/src/app/transport/transport.component.html
+++ b/WgWall/ClientApp/src/app/transport/transport.component.html
@@ -2,19 +2,38 @@
     <div class="card-body">
         <div class="row">
             <div class="col">
-                <h3>leaving {{stationName}}</h3>
-                <p>
-                    <span class="small text-secondary">shows next 4</span>
-                </p>
+                <h3>leaving {{stationName}} 
+                    <a *ngIf="!isEditActive" href="#" class="pl-2" (click)="enableEdit()">
+                        <fa-icon [icon]="faPencilAlt"></fa-icon>
+                    </a>
+                </h3>
             </div>
             <div class="col-auto">
-                <button class="btn btn-primary btn-sm mr-2 row" type="button" (click)="toggleEdit()">
-                    <fa-icon [icon]="faPencilAlt"></fa-icon>
-                </button>
+            </div>
+        </div>
+        
+        <div class="row pt-2" *ngIf="isEditActive">
+            <div class="col">
+                <input type="text" [(ngModel)]="stationName" class="form-control form-control-sm" id="productName"
+                    placeholder="new product name" (keyup.enter)="save()">
+            </div>
+            <div class="col-md-auto">
+                <div class="btn-group btn-group-sm">
+                        <button class="btn btn-sm btn-danger" type="button" (click)="abort()">
+                            <fa-icon [icon]="faTimes"></fa-icon>
+                        </button>
+                        <button class="btn btn-sm btn-success" type="button" (click)="save()">
+                                <fa-icon [icon]="faSave"></fa-icon>
+                        </button>
+                    </div>
             </div>
         </div>
 
-        <table class="table table-sm table-borderless">
+        <p class="small text-secondary">
+            shows next 4 departures
+        </p>
+
+        <table class="table table-sm table-borderless table-striped">
             <tbody>
                 <tr *ngFor="let vehicle of vehicles; first as isFirst" [class.border-top]="!isFirst">
                     <td>{{vehicle.name}}</td>
