working on overall desing, imporving product tile

--- a/WgWall/ClientApp/src/app/transport/transport.component.html
+++ b/WgWall/ClientApp/src/app/transport/transport.component.html
@@ -2,35 +2,29 @@
     <div class="card-body">
         <div class="row">
             <div class="col">
-                <h3>leaving {{stationName}} 
+                <h3>Station {{stationName}}
                     <a *ngIf="!isEditActive" href="#" class="pl-2" (click)="enableEdit()">
                         <fa-icon [icon]="faPencilAlt"></fa-icon>
                     </a>
+                    <a *ngIf="isEditActive" href="#" class="pl-2" (click)="abort()">
+                        <fa-icon [icon]="faTimes"></fa-icon>
+                    </a>
                 </h3>
-            </div>
-            <div class="col-auto">
-            </div>
-        </div>
-        
-        <div class="row pt-2" *ngIf="isEditActive">
-            <div class="col">
-                <input type="text" [(ngModel)]="stationName" class="form-control form-control-sm" id="productName"
-                    placeholder="new product name" (keyup.enter)="save()">
-            </div>
-            <div class="col-md-auto">
-                <div class="btn-group btn-group-sm">
-                        <button class="btn btn-sm btn-danger" type="button" (click)="abort()">
-                            <fa-icon [icon]="faTimes"></fa-icon>
-                        </button>
-                        <button class="btn btn-sm btn-success" type="button" (click)="save()">
-                                <fa-icon [icon]="faSave"></fa-icon>
-                        </button>
-                    </div>
             </div>
         </div>
 
-        <p class="small text-secondary">
-            shows next 4 departures
+        <div class="input-group pt-2" *ngIf="isEditActive">
+            <input type="text" [(ngModel)]="stationName" class="form-control form-control-sm" id="productName"
+                placeholder="new product name" (keyup.enter)="save()">
+            <div class="input-group-append">
+                <button class="btn btn-sm btn-success" type="button" (click)="save()">
+                    <fa-icon [icon]="faSave"></fa-icon>
+                </button>
+            </div>
+        </div>
+
+        <p class="small text-secondary help">
+            the next 4 departures
         </p>
 
         <table class="table table-sm table-borderless table-striped">
