--- a/WgWall/ClientApp/src/app/top-bar/top-bar.component.html
+++ b/WgWall/ClientApp/src/app/top-bar/top-bar.component.html
@@ -1,15 +1,9 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand">
-  <a class="navbar-brand" href="/">home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavbar" aria-controls="navbarSupportedContent"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="mainNavbar">
-    <ul class="navbar-nav mr-auto">
-    </ul>
-    <ul class="navbar-nav">
+<section class="top-bar">
+  <div class="row">
+    <div class="col">
+    </div>
+    <div class="col-md-auto">
       <app-users (userSelected)="onUserSelected($event)"></app-users>
-    </ul>
+    </div>
   </div>
-</nav>
+</section>
