--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -7,5 +7,8 @@
         <div class="col-md-2">
             <app-transport></app-transport>
         </div>
+        <div class="col-md-4">
+            <app-tasks [user]="selectedUser"></app-tasks>
+        </div>
     </div>
 </div>
