--- a/WgWall/ClientApp/src/app/user/user.component.html
+++ b/WgWall/ClientApp/src/app/user/user.component.html
@@ -1,7 +1,8 @@
-<div class="p-1" [ngClass]="{'bg-primary': user === selectedUser}" >
-  <svg version="1.1" class="rounded-circle" [ngClass]="{'border border-secondary': user === selectedUser, 'selectable': user !== selectedUser}" (click)="clicked()" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
-    <rect width="100%" height="100%" fill="lightgrey" />
+<div class="p-1" >
+  <svg version="1.1" [ngClass]="{'selectable': user !== selectedUser}" (click)="clicked()" height="100" width="100" baseProfile="full" xmlns="http://www.w3.org/2000/svg">
+    <rect width="100%" height="100%" fill="white" />
     <text x="50" y="40" fill="#212529" text-anchor="middle" alignment-baseline="central">{{user.name}}</text>
     <text x="50" y="60" fill="#6c757d" text-anchor="middle" alignment-baseline="central">{{user.karma}}</text>
+    <rect *ngIf="user === selectedUser" x="2.5%" y="2.5%" width="95%" height="95%" style="fill: transparent;stroke-width:3;stroke:rgb(0,0,0)" />
   </svg>
 </div>
