adapting to style guidelines

--- a/WgWall/ClientApp/src/app/products/products.component.html
+++ b/WgWall/ClientApp/src/app/products/products.component.html
@@ -60,7 +60,7 @@
                     <td *ngIf="isEditActive" class="minimal-width">
                         <div class="btn-group btn-group-sm">
                             <button class="btn btn-sm btn-danger" type="button" (click)="hide(product)">
-                                <fa-icon [icon]="faTimes"></fa-icon>
+                                <fa-icon [icon]="faEyeSlash"></fa-icon>
                             </button>
                         </div>
                     </td>
