working on task refactoring

--- a/WgWall/ClientApp/src/app/app.component.html
+++ b/WgWall/ClientApp/src/app/app.component.html
@@ -8,7 +8,7 @@
             <app-transport></app-transport>
         </div>
         <div class="col-md-4">
-            <app-tasks [user]="selectedUser"></app-tasks>
+            <app-tasks></app-tasks>
         </div>
     </div>
 </div>
